syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

package ecommerce;

option go_package = "github.com/monkrus/grpc-from0;grpc_from0";

service GetInterfaceDumps {
    rpc GetInterfaceDumps(GetInterfaceDumpsRequest) returns (Dumps) {
        option (google.api.http) = {
            get: "/dump/v1/{last_count}"
        };
    }
}

message GetInterfaceDumpsRequest {
    int32 last_count = 1;
}

message Dumps {
    repeated Dump dumps = 1;
}

message Dump {
    string id = 1;
    string name= 2;
    string mac = 3;
    string ip = 4;
    string dns = 5;
    string gateway = 6;
}
